# ray

./: .gitignore  CMakeLists.txt  PROJECT_DETAILED_GUIDE.txt  README.md  README_PORTABLE.md  config.json  install.bat  install.sh  run.bat  run.sh  run_frontend.sh
frontend/: index.html
scripts/: install.bat  install.sh  orion_env.sh  orion_frontend.py  orion_portable.py  run.bat  run.sh  test_orion_frontend.py
src/: main.cpp
src/core/: random.h  ray.h
src/material/: material.h
src/math/: vec3.h
src/render/: camera.h  gpu_renderer.cu  gpu_renderer.h  gpu_scene.h  image.h  renderer.h
src/scene/: aabb.h  bvh.h  gpu_scene_builder.h  hit.h  hittable.h  scene_builder.h  sphere.h  triangle.h
src/studio/: studio_main.cpp
